fix: next text overflow fix on headings and p tags

--- a/styles/main.css
+++ b/styles/main.css
@@ -25,9 +25,9 @@ h3,
 h4,
 h5,
 h6,
-a,
 p {
   overflow-wrap: break-word;
+  hyphens: auto;
 }
 
 .window {
